BUG: Game name is offset too much to the right, fixed by reducing margin-left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 .name {
-  margin-left: 30px;
+  margin-left: 5px;
 }
 .lore-text {
   margin: 2rem 10%;
